# topoHBNet

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  run_analysis.py
.github/workflows/: test.yml
examples/: example_analysis.py
examples/cp2k_aimd/: example_analysis.py
examples/lammps/: example_analysis.py
hbond_topology/: __init__.py
hbond_topology/analysis/: __init__.py  dynamics.py  persistence_visualizer.py  visualization.py
hbond_topology/detection/: __init__.py  hbond_detector.py
hbond_topology/embedding/: __init__.py  embedder.py
hbond_topology/io/: __init__.py  trajectory_parser.py
hbond_topology/learning/: __init__.py  gnn_enhanced_tnn.py  tnn_model.py
hbond_topology/topology/: __init__.py  complex_builder.py  invariants.py  persistence.py
tests/: __init__.py  test_dynamics.py  test_gnn_enhanced_tnn.py  test_hbond_detector.py  test_learning.py  test_persistence.py  test_topology.py  test_torch_env.py  test_trajectory_parser.py
